# rusty_jvm

./: Cargo.toml  README.md
examples/simple_programs/: HelloWorld.java
src/: error.rs  lib.rs  main.rs
src/classfile/: attributes.rs  constant_pool.rs  mod.rs  parser.rs
src/classloader/: bootstrap.rs
src/gc/: mark_sweep.rs  mod.rs
src/interpreter/: bytecode.rs  mod.rs
src/interpreter/instructions/: mod.rs
src/runtime/: frame.rs  heap.rs  method_area.rs  mod.rs  stack.rs
tests/: integration_tests.rs
